# Tasks_plasmAI

./: BASIC_NEURAL_NETWORK_V1.py  dataset_class_V2.py  pyproject.toml
