[tool.poetry]
name = "tasks-plasmai"
version = "0.1.0"
description = ""
authors = ["tatiana-boura <tat.boura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = {version = "^2.5.1+cu118", source = "pytorch-gpu"}


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
